# Technical-Test

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
account/: serializers.py  urls.py  views.py
blog_community/: asgi.py  settings.py  urls.py  wsgi.py
blogs/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
